# zenoh-backend-redb

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  audit.toml  ci-local.sh  deny.toml  docker-compose.yml  justfile
.github/workflows/: ci.yml  release.yml
benches/: backend_benchmarks.rs  storage_benchmarks.rs
config/: zenoh-redb-example.json5
examples/: basic_usage.rs  plugin_demo.rs
src/: backend.rs  config.rs  error.rs  lib.rs  plugin.rs  storage.rs
tests/: README.md  integration_backend.rs  integration_plugin.rs  integration_storage.rs  integration_zenohd.rs
