[package]
name = "zenoh-backend-redb"
version = "0.3.1"
edition = "2024"
authors = ["Marc PARDO <p13marc@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "A Zenoh storage backend using redb embedded database"
repository = "https://github.com/p13marc/zenoh-backend-redb"
readme = "README.md"
keywords = ["zenoh", "storage", "backend", "redb", "database"]
categories = ["database", "network-programming"]

[lib]
name = "zenoh_backend_redb"
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin"]
plugin = ["dynamic_plugin"]
dynamic_plugin = []

[dependencies]
# Core database
redb = "2.1"

# Zenoh dependencies
zenoh = { version = "=1.7.0", features = ["plugins", "unstable", "internal"] }
zenoh-plugin-trait = "=1.7.0"
zenoh_backend_traits = { version = "=1.7.0", default-features = false }
zenoh-util = "=1.7.0"
zenoh-ext = { version = "=1.7.0", features = ["unstable"] }

# Async support
async-trait = "0.1"
tokio = { version = "1.35", features = ["sync", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"



[dev-dependencies]
tempfile = "3.8"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "backend_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
